--- a/index.html
+++ b/index.html
@@ -74,9 +74,13 @@
    data-aos-delay="1500"
    data-aos-duration='800'></div>
    <section class="features">
-      <div class="overview" data-aos="zoom-in-right" data-aos-duration='800'>
-         <h2 class="features-title">Falcon Heavy Overview</h2>
-         <div class="table">
+      <div class="overview">
+         <h2 class="features-title"
+         data-aos="zoom-in-right"
+         data-aos-duration='800'>
+            Falcon Heavy Overview
+         </h2>
+         <div class="table" data-aos="zoom-in-right" data-aos-duration='700'>
             <ul class="table-left">
                <li class="table-li">HEIGHT</li>
                <li class="table-li">DIAMETER</li>
@@ -85,7 +89,7 @@
                <li class="table-li">PAYLOAD TO GTO</li>
                <li class="table-li">PAYLOAD TO MARS</li>
             </ul>
-            <ul class="table-right">
+            <ul class="table-right" data-aos="zoom-in-right" data-aos-duration='800'>
                <li class="table-li">70 m / 229.6 ft</li>
                <li class="table-li">12.2 m / 39.9 ft</li>
                <li class="table-li">1,420,788 kg / 3,125,735 lb</li>
@@ -94,8 +98,12 @@
                <li class="table-li">16,800 kg / 37,040 lb</li>
             </ul>
          </div>
-         <h2 class="features-title">UNMATCHED PERFORMANCE</h2>
-         <p class="features-text">
+         <h2 class="features-title"
+         data-aos="zoom-in-right"
+         data-aos-duration='800'>
+            UNMATCHED PERFORMANCE
+         </h2>
+         <p class="features-text" data-aos="zoom-in-right" data-aos-duration='800'>
             With more than 5 million pounds of thrust at liftoff, Falcon Heavy is the most capable rocket flying. By comparison, the
             liftoff thrust of the Falcon Heavy equals approximately eighteen 747 aircraft at full power. Falcon Heavy can lift the
             equivalent of a fully loaded 737 jetliner—complete with passengers, luggage and fuel—to orbit.
